[gd_scene load_steps=13 format=3 uid="uid://dtsfutbumtxem"]

[ext_resource type="FontFile" uid="uid://cu4lf4od2owng" path="res://Assets/font/FlappyBird.ttf" id="1_37paw"]
[ext_resource type="Script" path="res://Scene/UI.gd" id="1_fawne"]
[ext_resource type="Texture2D" uid="uid://gm8h1jin1vfi" path="res://Assets/upperBg2.png" id="2_6ml1m"]
[ext_resource type="Texture2D" uid="uid://cfngk5p65xvc7" path="res://Assets/blackboard.jpg" id="2_jlf7u"]
[ext_resource type="Texture2D" uid="uid://cwqx4gp2dqb33" path="res://Assets/PianoPanel.png" id="3_1awqb"]
[ext_resource type="Texture2D" uid="uid://x218sp1de1n0" path="res://Assets/gameover.png" id="3_wrxua"]
[ext_resource type="Texture2D" uid="uid://c74tx0ih0jk0l" path="res://Assets/PianoPanel_v2.png" id="5_n58em"]
[ext_resource type="FontFile" uid="uid://tq86asxqnm7p" path="res://Assets/font/Seven Segment.ttf" id="7_4ss1h"]
[ext_resource type="Theme" uid="uid://cjli33ttnplxc" path="res://OptionTheme.tres" id="9_qy2y6"]
[ext_resource type="Texture2D" uid="uid://dqpqspaxmn3rd" path="res://Assets/Digital.png" id="10_wqp2g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l7k0i"]
bg_color = Color(0.94902, 0.564706, 0, 0.568627)

[sub_resource type="SystemFont" id="SystemFont_d4u5b"]
subpixel_positioning = 0

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fawne")

[node name="Blackboard3" type="Sprite2D" parent="."]
visible = false
position = Vector2(514.75, 70.25)
scale = Vector2(0.886849, 0.305252)
texture = ExtResource("2_6ml1m")

[node name="Blackboard5" type="Sprite2D" parent="."]
visible = false
position = Vector2(515.687, 74.75)
scale = Vector2(0.457017, 0.506309)
texture = ExtResource("3_1awqb")

[node name="Blackboard2" type="Sprite2D" parent="."]
visible = false
position = Vector2(513, 71.125)
scale = Vector2(0.814844, 0.175557)
texture = ExtResource("2_jlf7u")

[node name="Blackboard" type="Sprite2D" parent="."]
position = Vector2(513, 81.5)
scale = Vector2(0.498058, 0.586806)
texture = ExtResource("5_n58em")

[node name="Digital" type="Sprite2D" parent="."]
position = Vector2(218, 150.5)
scale = Vector2(0.554723, 0.116379)
texture = ExtResource("10_wqp2g")

[node name="Digital2" type="Sprite2D" parent="."]
position = Vector2(808, 150.5)
scale = Vector2(0.551724, 0.116379)
texture = ExtResource("10_wqp2g")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -3.0
offset_right = -41.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_qy2y6")
theme_override_constants/margin_top = 32

[node name="PointsLabel" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 82.5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_4ss1h")
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_wrxua")

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_l7k0i")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GameOverBox/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -20.0
offset_right = 32.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="MarginContainer/GameOverBox/Panel/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("1_37paw")
theme_override_font_sizes/font_size = 40
text = "Restart"

[node name="GameOverBox2" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="MarginContainer/GameOverBox2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.988235, 0.627451, 0.282353, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/font = ExtResource("1_37paw")
theme_override_font_sizes/font_size = 60
text = "Level Cleared"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox2"]
custom_minimum_size = Vector2(200, 170.03)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_l7k0i")

[node name="MarginContainer" type="VBoxContainer" parent="MarginContainer/GameOverBox2/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -20.0
offset_right = 32.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button2" type="Button" parent="MarginContainer/GameOverBox2/Panel/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_37paw")
theme_override_font_sizes/font_size = 40
text = "Next Level"

[node name="Button3" type="Button" parent="MarginContainer/GameOverBox2/Panel/MarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_37paw")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Button" type="Button" parent="."]
offset_left = 6.0
offset_top = 2.0
offset_right = 63.0
offset_bottom = 36.0
text = "Pause"

[node name="Button2" type="Button" parent="."]
offset_left = 965.0
offset_top = 2.0
offset_right = 1022.0
offset_bottom = 36.0
text = "Help"

[node name="Panel2" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
self_modulate = Color(0, 0, 0, 1)
visibility_layer = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 192.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_qy2y6")
theme_override_constants/separation = 15

[node name="PauseMenuLabel" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Pause Menu"
horizontal_alignment = 1

[node name="VBoxContainer" type="GridContainer" parent="Content"]
custom_minimum_size = Vector2(30, 60)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="Content/VBoxContainer"]
custom_minimum_size = Vector2(340, 30)
layout_mode = 2
size_flags_horizontal = 6

[node name="ResumeGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
process_mode = 3
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="QuitButton3" type="Button" parent="Content"]
process_mode = 3
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="QuitButton2" type="Button" parent="Content"]
process_mode = 3
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Level Selector"

[node name="QuitButton" type="Button" parent="Content"]
process_mode = 3
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Content2" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 10.0
offset_top = 26.0
offset_right = 1016.0
offset_bottom = 749.0

[node name="InstructionLabel" type="Label" parent="Content2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Instructions"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Content2"]
layout_mode = 2

[node name="ButtonBack2" type="Button" parent="Content2"]
process_mode = 3
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="Label" type="RichTextLabel" parent="."]
offset_left = 55.0
offset_top = 136.0
offset_right = 397.0
offset_bottom = 180.0
theme = ExtResource("9_qy2y6")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = SubResource("SystemFont_d4u5b")
theme_override_fonts/bold_font = ExtResource("7_4ss1h")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 0.929412, 0, 1)
offset_left = 254.0
offset_top = 2.0
offset_right = 764.0
offset_bottom = 29.0

[node name="Label2" type="RichTextLabel" parent="."]
offset_left = 660.0
offset_top = 135.0
offset_right = 1005.0
offset_bottom = 169.0
theme = ExtResource("9_qy2y6")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("7_4ss1h")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true

[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/MarginContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/GameOverBox2/Panel/MarginContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/GameOverBox2/Panel/MarginContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_new_pressed"]
[connection signal="pressed" from="Content/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="Content/QuitButton3" to="." method="_on_quit_button_3_pressed"]
[connection signal="pressed" from="Content/QuitButton2" to="." method="_on_quit_button_2_pressed"]
[connection signal="pressed" from="Content/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Content2/ButtonBack2" to="." method="_on_button_back_pressed"]
